lecture5/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web1

---
apiVersion: v1
kind: Namespace
metadata:
  name: web2
