lecture5/secret-example2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: db
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mariadb:10.7
          envFrom:                             # ConfigMap 및 Secret의 모든 키-값 쌍을 환경 변수로 컨테이너에 주입
            - configMapRef:
                name: mysql-config             # ConfigMap에 정의된 key mysql-config의 모든 데이터가 자동으로 환경 변수로 추가
          env:                                 # 특정 키만 선택적으로 환경 변수로 설정
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:                 # Secret을 참고한다고 정의하는 블록
                  name: mysql-secret          # 참조 할 secret name 참고한다고 정의
                  key: MYSQL_ROOT_PASSWORD    # 참조 할 key
