lecture5/configmap-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.17
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index-config-vol
              mountPath:  /usr/share/nginx/html/index.html    # 컨테이너 내부의 파일 시스템 경로 지정
              subPath: index.html                             # 볼륨의 특정 파일이나 디렉터리만 마운트하는 데 사용(아래 volumes path 중 일부)
      volumes:
        - name: nginx-index-config-vol
          configMap:
            name: nginx-configmap
            items:
              - key: index.html                               # ConfigMap의 특정 데이터 (여기서는 data.index.html: )
                path: index.html                              # ConfigMap key에 해당하는 값(데이터) 마운트할 사용 할 내부 파일 이름
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
