lecture5/web1-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web1-ing
spec:
  ingressClassName: nginx
  rules:
    - host: "nginx.211.253.25.128.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
